--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
+name = "pybind11-OpenKE"
+authors = [{name = "LuYF-Lemon-love", email = "3555028709@qq.com"}]
 dynamic = ["version", "description"]
