--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,6 +19,9 @@ build:
 sphinx:
    configuration: docs/conf.py
 
+sphinx:
+   fail_on_warning: true
+
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 # formats:
 #    - pdf
