--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,10 @@
 sphinx==7.1.2
 sphinx-rtd-theme==1.3.0rc1
+sphinx-autopackagesummary==1.3
+    # self add
+sphinx-gallery==0.13.0
+    # self add
+sphinx-copybutton
+    # self add
+pillow
+    # self add
