--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ test
 benchmarks/FB15K/type_constrain.txt
 benchmarks/FB15K237/type_constrain.txt
 benchmarks/WN18RR/type_constrain.txt
+best_network.pth
