--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [build-system]
 requires = [
-    "setuptools>=42",
-    "pybind11>=2.10.0",
+    "setuptools>=42"
 ]
 build-backend = "setuptools.build_meta"
